--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
-                    Sortear amigo
+                    Sortear
                 </button>
                 <br>
                 <button class="button-reset" onclick="reiniciarJogo()" aria-label="Reiniciar jogo">
