--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </header>
         
         <section class="input-section">
-            <h2 class="section-title">Digite o nome dos seus amigos</h2>
+            <h2 class="section-title">Digite os nomes dos seus amigos</h2>
             <h3 class="section-subtitle">Digite os nomes separados por vírgula, ou um por vez</h3>
             <div class="input-wrapper">
-                <input type="text" id="amigo" class="input-name" placeholder="Digite um nome">
+                <input type="text" id="amigo" class="input-name" placeholder="Digite os nomes separados por vírgula, ou um por vez">
                 <button class="button-add" onclick="adicionarAmigo()">Adicionar</button>
             </div>
            
